--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Merge upstream changes
         run: |
-          git checkout master  # 切换到你需要同步的分支，如 main/master
+          git checkout --track upstream/master  # 切换到你需要同步的分支，如 main/master
           git merge upstream/master  # 合并上游仓库的更新
 
       - name: Push changes to forked repository
