--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Auto Sync Fork with Upstream
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 每小时运行一次
+    - cron: '0 * * * *'  # 每小时运行一次 test
   workflow_dispatch:  # 支持手动触发同步
 
 jobs:
